@@ -303,7 +303,7 @@ dav_error * dav_fs_dir_file_name(
 /* NOTE: buf must be at least DAV_TIMEBUF_SIZE chars in size */
 static void dav_format_time(int style, apr_time_t sec, char *buf)
 {
-    apr_exploded_time_t tms;
+    apr_time_exp_t tms;
     
     /* ### what to do if fails? */
     (void) apr_explode_gmt(&tms, sec);
